# template-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/hello_world/: arguments.md
hello_world/: __main__.py  arguments.py  hello.py  logs.py
scripts/mk/: includes.mk  python-rules.mk  variables.mk
test/: test_arguments.py  test_hello.py
