# https://docs.pytest.org/en/latest/explanation/goodpractices
# https://packaging.python.org/en/latest/guides/writing-pypro
[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "hello world application"
authors = ["Alejandro Visiedo <alejandro.visiedo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest-cov = ">=6.2.1,<6.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<8.4.0"
black = ">=25.1.0,<25.2.0"
pylint = ">=3.3.7,<3.4.0"
pdoc3 = ">=0.11.6,<0.12.0"
tox = ">=4.26.0,<4.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
